--- a/style/style.css
+++ b/style/style.css
@@ -69,7 +69,7 @@ a{
     width: 100%;
     position: fixed;
     bottom: 0;
-    height: 5%;
+    height: 10vh;
     border: #2e2e2e solid 3px;
     padding: 0.5em;
     display: flex;
@@ -87,5 +87,6 @@ a{
 .footer-subtext {
     font-size: 14px;
     font-weight: 500;
+    padding: 0.5em;
     font-family: 'Spartan', sans-serif;
 }
