--- a/style/style.css
+++ b/style/style.css
@@ -85,8 +85,38 @@ a{
 }
 
 .footer-subtext {
+    text-align: center;
     font-size: 14px;
     font-weight: 500;
     padding: 0.5em;
     font-family: 'Spartan', sans-serif;
+}
+
+
+@media screen and (max-width: 900px) {
+  
+    .footer-container {
+        width: 100%;
+        font-size: 14px !important;
+        position: fixed;
+        bottom: 0;
+        height: 12vh;
+        border: #2e2e2e solid 3px;
+        padding: 0.5em;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .footer-text {
+        font-size: 14px;
+        font-weight: 600;
+        font-family: 'Spartan', sans-serif;
+    }
+    .footer-subtext {
+        font-size: 12px;
+        font-weight: 500;
+        padding: 0.5em;
+        font-family: 'Spartan', sans-serif;
+    }
 }
